<resources>
    <string name="app_name" translatable="false">AdoptMe</string>
    <string name="action_settings">Settings</string>
    <string name="descripcio">Description</string>
    <string name="edat">Age</string>
    <string name="anys">Years</string>
    <string name="desconegut">Unknown</string>
    <string name="sexe">Sex</string>
    <string name="mascle">Male</string>
    <string name="femella">Female</string>
    <string name="distancia">Distance</string>
    <string name="contacte">Contact info:</string>
    <string name="nom">Name</string>
    <string name="telefon">Phone</string>
    <string name="email">Email</string>
    <string name="action_OK">OK</string>
    <string name="action_filtra">Filter</string>
    <string name="localització">Location</string>
    <string name="omple">Fill the missing fields</string>
    <string name="missingimg">The image is missing</string>
    <string name="usrnotfound">User not found</string>
    <string name="adoptme" translatable="false">Adopt Me</string>
    <string name="cognom">Surname</string>
    <string name="next">NEXT</string>
    <string name="writenotallowed">The app will not work without Write permissions</string>
    <string name="locationenable">Please, turn on the location or the distance will not work propertly</string>
    <string name="YES" translatable="false">OK</string>
    <string name="NO" translatable="false">NO</string>
    <string name="locationcrea">Please, turn on the location to continue</string>
    <string name="title_location_permission">Location permission</string>
    <string name="text_location_permission">Turn on location permission to use AdoptMe</string>

</resources>
