<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:rsb="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="barcons.pol.adoptme.FiltraActivity">


    <CheckBox
        android:id="@+id/filtra_loc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="40sp"
        android:layout_marginTop="40sp"
        android:text="@string/localització"
        android:textSize="24sp" />

    <CheckBox
        android:id="@+id/filtra_edat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/filtra_loc"
        android:layout_alignStart="@+id/filtra_loc"
        android:layout_below="@+id/filtra_loc"
        android:layout_marginTop="89dp"
        android:text="@string/edat"
        android:textSize="24sp" />

    <CheckBox
        android:id="@+id/filtra_sexe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/filtra_edat"
        android:layout_alignStart="@+id/filtra_edat"
        android:layout_below="@+id/filtra_edat"
        android:layout_marginTop="132dp"
        android:text="@string/sexe"
        android:textSize="24sp" />

    <CheckBox
        android:id="@+id/sexe_mascle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/filtra_loc"
        android:layout_alignRight="@+id/filtra_loc"
        android:layout_below="@+id/filtra_sexe"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginTop="13dp"
        android:text="@string/mascle"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/sexe_femella"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sexe_mascle"
        android:layout_alignStart="@+id/sexe_mascle"
        android:layout_below="@+id/sexe_mascle"
        android:text="@string/femella"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/edat_desconegut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/loc_bar"
        android:layout_alignStart="@+id/loc_bar"
        android:layout_below="@+id/edat_bar"
        android:layout_marginTop="24dp"
        android:text="@string/desconegut"
        android:textSize="18sp" />

    <org.florescu.android.rangeseekbar.RangeSeekBar
        android:id="@+id/edat_bar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/loc_bar"
        android:layout_alignLeft="@+id/loc_bar"
        android:layout_alignRight="@+id/loc_bar"
        android:layout_alignStart="@+id/loc_bar"
        android:layout_below="@+id/filtra_edat"
        rsb:absoluteMaxValue="0"
        rsb:absoluteMinValue="15"/>

    <org.florescu.android.rangeseekbar.RangeSeekBar
        android:id="@+id/loc_bar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="54dp"
        android:layout_below="@+id/filtra_loc"
        android:layout_marginTop="8dp"
        rsb:absoluteMaxValue="0"
        rsb:absoluteMinValue="200"
        rsb:singleThumb="true"/>



</RelativeLayout>
