<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <!-- <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="800px"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:id="@+id/relativeLayout3">

         </RelativeLayout>
        -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/relativeLayout3"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/telefon"
                android:layout_alignStart="@+id/telefon"
                android:layout_below="@+id/telefon"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="34dp"
                android:text="@string/email"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/c_text_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/email"
                android:layout_alignBottom="@+id/email"
                android:layout_alignEnd="@+id/c_check_desconegut"
                android:layout_alignLeft="@+id/c_text_telefon"
                android:layout_alignRight="@+id/c_check_desconegut"
                android:layout_alignStart="@+id/c_text_telefon"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/c_text_telefon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/telefon"
                android:layout_alignBottom="@+id/telefon"
                android:layout_alignEnd="@+id/c_text_nom"
                android:layout_alignLeft="@+id/c_text_nom"
                android:layout_alignRight="@+id/c_text_nom"
                android:layout_alignStart="@+id/c_text_nom"
                android:inputType="phone"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/telefon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/nom"
                android:layout_alignStart="@+id/nom"
                android:layout_below="@+id/nom"
                android:layout_marginTop="39dp"
                android:text="@string/telefon"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/c_text_nom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/nom"
                android:layout_alignBottom="@+id/nom"
                android:layout_alignLeft="@+id/c_check_male"
                android:layout_alignStart="@+id/c_check_male"
                android:layout_toLeftOf="@+id/c_check_female"
                android:layout_toStartOf="@+id/c_check_female"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/nom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/contacte"
                android:layout_alignStart="@+id/contacte"
                android:layout_below="@+id/contacte"
                android:layout_marginTop="38dp"
                android:text="@string/nom"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/contacte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/sexe"
                android:layout_alignStart="@+id/sexe"
                android:layout_below="@+id/c_check_male"
                android:layout_marginTop="27dp"
                android:text="@string/contacte"
                android:textSize="24sp" />

            <CheckBox
                android:id="@+id/c_check_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/c_check_male"
                android:layout_alignBottom="@+id/c_check_male"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="17dp"
                android:layout_marginRight="17dp"
                android:text="@string/femella" />


            <ImageView
                android:id="@+id/c_edit_image"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:adjustViewBounds="false"
                app:srcCompat="@android:drawable/ic_menu_report_image" />

            <TextView
                android:id="@+id/sexe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/edat"
                android:layout_alignStart="@+id/edat"
                android:layout_below="@+id/edat"
                android:layout_marginTop="43dp"
                android:text="@string/sexe"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/c_text_edat"
                android:layout_width="39dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/c_check_desconegut"
                android:layout_toEndOf="@+id/anys"
                android:layout_toRightOf="@+id/anys"
                android:inputType="number"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/anys"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/c_check_desconegut"
                android:layout_alignBottom="@+id/c_check_desconegut"
                android:layout_alignLeft="@+id/c_text_descripcio"
                android:layout_alignStart="@+id/c_text_descripcio"
                android:text="@string/anys"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/c_text_descripcio"
                style="@android:style/TextAppearance.Holo.Widget.EditText"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/descripcio"
                android:layout_marginEnd="26dp"
                android:layout_marginRight="26dp"
                android:text="..."
                android:textSize="14sp" />

            <TextView
                android:id="@+id/edat"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignBaseline="@+id/c_check_desconegut"
                android:layout_alignBottom="@+id/c_check_desconegut"
                android:layout_alignLeft="@+id/descripcio"
                android:layout_alignStart="@+id/descripcio"
                android:text="@string/edat"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/descripcio"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/c_edit_image"
                android:layout_marginLeft="18dp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="18dp"
                android:text="@string/descripcio"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/c_check_desconegut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/c_text_descripcio"
                android:layout_alignRight="@+id/c_text_descripcio"
                android:layout_below="@+id/c_text_descripcio"
                android:layout_marginTop="66dp"
                android:text="@string/desconegut" />

            <CheckBox
                android:id="@+id/c_check_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/sexe"
                android:layout_alignBottom="@+id/sexe"
                android:layout_alignLeft="@+id/anys"
                android:layout_alignStart="@+id/anys"
                android:text="@string/mascle" />
        </RelativeLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>