<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="barcons.pol.adoptme.FirstTimeActivity">

    <TextView
        android:id="@+id/titol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/adoptme"
        android:textColor="@android:color/background_dark"
        android:textSize="52sp" />

    <TextView
        android:id="@+id/info_nom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/info_cognom"
        android:layout_alignStart="@+id/info_cognom"
        android:layout_below="@+id/titol"
        android:layout_marginTop="74dp"
        android:text="@string/nom"
        android:textColor="@android:color/background_dark"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/info_cognom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/info_nom"
        android:layout_marginLeft="44dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="29dp"
        android:text="@string/cognom"
        android:textColor="@android:color/background_dark"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/first_nom"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/info_nom"
        android:layout_alignBottom="@+id/info_nom"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/first_cognom"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/info_cognom"
        android:layout_alignBottom="@+id/info_cognom"
        android:layout_alignLeft="@+id/first_nom"
        android:layout_alignStart="@+id/first_nom"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="90dp"
        android:layout_height="65dp"
        android:layout_alignEnd="@+id/first_cognom"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/first_cognom"
        android:layout_marginBottom="20dp"
        android:text="@string/next"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp" />
</RelativeLayout>
